# fasthtml_boilerplate

./: .gitignore  README.md  main.py  pyproject.toml  terms_of_service.md
